<resources>
    <string name="empty">Empty</string>
    <string name="app_name">nameBattler</string>
    <string name="next_turn">次のターン</string>
    <string name="title_name">ネームバトラー</string>
    <string name="btn_new_create">新しく作成する</string>
    <string name="msg_enter_name">名前を入力してください</string>
    <string name="enter_character_name">Enter Character Name</string>
    <string name="msg_pls_enter_character_name">名前を入力してください</string>
    <string name="input_character_name">input character name</string>
    <string name="colon">:</string>
    <string name="slash">/</string>
    <string name="name">キャラクター名</string>
    <string name="display_name_job">職業名</string>
    <string name="display_name_hp">HP</string>
    <string name="display_name_mp">MP</string>
    <string name="display_name_str">STR</string>
    <string name="display_name_def">DEF</string>
    <string name="display_name_agi">AGI</string>
    <string name="display_name_luck">LUCK</string>
    <string name="display_name_create_at">作成日：</string>
    <string name="display_name_status">ステータス</string>
    <string name="btn_continue_to_create">続けて作成する</string>
    <string name="btn_end_to_create">作成を終了する</string>
    <string name="change_operation">変更</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment_common</string>
    <string name="anystringvalue">anyStringValue</string>

    <!-- TODO: string of sample -->
    <string name="hint_word">Word...</string>
    <string name="hint_id">ID...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="vs">VS</string>
    <string name="screen_back">戻る</string>
    <string name="isCreate">作成する</string>
    <string name="berserker">バーサーカー</string>
    <string name="Priest">僧侶</string>
    <string name="Spellcaster">魔法使い</string>
    <string name="Warrior">戦士</string>
    <string name="input_name"> name </string>
    <string name="select_job">職業を選択してください</string>
    <string name="isDelete">削除する</string>
    <string name="fight_this_opponent">この相手と戦う</string>
    <string name="reselect">相手を選びなおす</string>
    <string name="start_at_this_party">このパーティで開始</string>
    <!-- 作戦変更 -->
    <string name="please_select_a_operation">パーティーの作戦を選んで下ください</string>
    <string name="offensive_operation">ガンガンいこうぜ</string>
    <string name="defensive_operation">いのちだいじに</string>
    <string name="flexible_operation">バッチリがんばれ</string>
    <string name="decision">決定</string>
    <!-- バトル結果 -->
    <string name="challenge_again">再挑戦</string>
    <string name="next_battle">次の対戦へ</string>
    <string name="end_battle">対戦を終了する</string>

    <!-- ヘッダーテキスト -->
    <string name="character_list">キャラ一覧</string>
    <string name="details_character">キャラ詳細</string>
    <string name="create_character">キャラ作成 </string>
    <string name="party_formation">パーティ-編成 </string>
    <string name="battle_start">バトル開始</string>
    <string name="battle_main">バトル</string>
    <string name="battle_result">バトル結果</string>
    <string name="operation">作戦</string>






</resources>
