<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="characterViewModel"
            type="com.example.namebattler.viewModel.CharacterViewModel" />
        
        <variable
            name="operationDatabaseViewModel"
            type="com.example.namebattler.viewModel.OperationDatabaseViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".characters.fragment.CharacterStatusDetailFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/value_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@{characterViewModel.characterStatus.NAME}"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/value_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@{characterViewModel.getJobName(characterViewModel.characterStatus.JOB)}"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_name"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/display_name_status"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_job"
            app:layout_constraintVertical_bias="0.05" />

        <LinearLayout
            android:id="@+id/status_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_status"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/txt_status_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_name_hp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_status_mp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_name_mp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_status_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_name_str"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_status_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_name_def"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_status_agi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_name_agi"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_status_luck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_name_luck"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/status"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/status_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_status"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/value_status_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(characterViewModel.characterStatus.HP)}"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/value_status_mp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(characterViewModel.characterStatus.MP)}"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/value_status_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(characterViewModel.characterStatus.STR)}"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/value_status_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(characterViewModel.characterStatus.DEF)}"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/value_status_agi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(characterViewModel.characterStatus.AGI)}"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/value_status_luck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(characterViewModel.characterStatus.LUCK)}"
                android:textSize="30sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>